--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -3,4 +3,42 @@
     justify-content: flex-start;
     margin: 3rem;
     gap: 3rem;
+
+}
+.image{
+    object-fit: cover;
+   
+}
+.movieHover {
+    position: relative;
+    transition: transform 0.2s;
+
+}
+
+.movieHover:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.movieHover:hover .overlay {
+	opacity: 1;
+}
+
+.overlay {
+	position: absolute;
+	background: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	transition: 0.5s ease;
+	opacity: 0;
+	bottom: 0;
+	font-size: 20px;
+	padding: 20px;
+	text-align: center;
 }
